add reference imports for usage of `@apply`

--- a/src/components/PodcastEpisodeTranscript.astro
+++ b/src/components/PodcastEpisodeTranscript.astro
@@ -9,6 +9,8 @@ const { utterances } = Astro.props;
 
 ---
 <style is:global>
+	@reference "../styles/global.css";
+
 .transcript {
 	
 	@apply mt-2 relative overflow-y-hidden;
