--- a/src/pages/deutsche-tech-podcasts/index.astro
+++ b/src/pages/deutsche-tech-podcasts/index.astro
@@ -77,6 +77,8 @@ germanTechPodcasts.sort(orderByName);
 					</div>
 
 					<style>
+						@reference "../../styles/global.css";
+
 						ul.tag-list {
 							@apply list-none;
 						}
