--- a/src/pages/podcast-werbung.astro
+++ b/src/pages/podcast-werbung.astro
@@ -54,6 +54,8 @@ import testimonialMediaLab from "../images/partners/medialab_alex.jpg";
 			</section>
 
 			<style type="text/css">
+				@reference "../styles/global.css";
+
 				.partner-image {
 					@apply h-20 w-auto mx-0 my-8 sm:mx-8 max-w-full block sm:inline-block;
 				}
