--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -195,6 +195,8 @@ bestPerformingEpisodes = bestPerformingEpisodes.slice(0, 6);
 			</section>
 
 			<style>
+				@reference "../styles/global.css";
+
 				.review-box {
 					@apply w-full px-4 mb-8 min-w-full;
 				}
