Games für Softwareentwicklerinnern: Show if a game is programmable

--- a/src/components/SoftwareEngineeringGamePreview.astro
+++ b/src/components/SoftwareEngineeringGamePreview.astro
@@ -42,8 +42,13 @@ const nameId = URLify(game.data.name);
 				<p class="mb-6 text-lg md:text-xl text-coolGray-500 font-medium">
 					{game.data.german_content.short_description}
 				</p>
-				<ul class="mb-4 text-lg md:text-xl text-coolGray-500 font-medium list-disc list-inside">
-					<li class="flex flex-wrap items-center">Verfügbar auf: {game.data.platforms.windows && (<img class="w-8 ml-3" src="/images/brands/windows.svg" alt={`${game.data.name} auf Windows`} title={`${game.data.name} auf Windows`} />)} {game.data.platforms.mac && (<img class="w-8 ml-3" src="/images/brands/apple-os.svg" alt={`${game.data.name} auf Mac`} title={`${game.data.name} auf Mac`} />)} {game.data.platforms.linux && (<img class="w-8 ml-3" src="/images/brands/linux.svg" alt={`${game.data.name} auf Linux`} title={`${game.data.name} auf Linux`} />)}</li>
+				<ul class="mb-4 text-lg md:text-xl text-coolGray-500 font-medium">
+					{
+						game.data.programmable && (
+							<li class="pb-4">Programmierbar? Ja 🤖</li>
+						)
+					}
+					<li class="space-x-3">Verfügbar auf: {game.data.platforms.windows && (<img class="w-7 inline" src="/images/brands/windows.svg" alt={`${game.data.name} auf Windows`} title={`${game.data.name} auf Windows`} />)} {game.data.platforms.mac && (<img class="w-7 inline" src="/images/brands/apple-os.svg" alt={`${game.data.name} auf Mac`} title={`${game.data.name} auf Mac`} />)} {game.data.platforms.linux && (<img class="w-7 inline" src="/images/brands/linux.svg" alt={`${game.data.name} auf Linux`} title={`${game.data.name} auf Linux`} />)}</li>
 				</ul>
 				
 				<div class="flex flex-wrap">
