Add new image header for awesome-software-engineering-games

--- a/src/pages/spiele-fuer-softwareentwickler/[genre]-spiele.astro
+++ b/src/pages/spiele-fuer-softwareentwickler/[genre]-spiele.astro
@@ -68,13 +68,11 @@ function orderByName(a, b) {
 	return 0;
 }
 games = games.sort(orderByName);
-
-// TODO: Fix header image - germen tech podcasts head is not correct here
 ---
 
 <html lang="de">
 	<head>
-		<MainHead title={title} description={genreDescription_short} image="/images/headers/german-tech-podcasts-head.jpeg" {canonicalURL} />
+		<MainHead title={title} description={genreDescription_short} image="/images/headers/awesome-software-engineering-games-head.png" {canonicalURL} />
 	</head>
 
 	<body class="antialiased bg-body text-body font-body">
