Footer: Add new links and emojys

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -86,19 +86,22 @@ const year = new Date().getFullYear();
 				<h3 class="mb-5 mt-10 text-lg font-bold text-coolGray-900">Anderes</h3>
 				<ul>
 					<li class="mb-4">
-						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Deutschsprachige Tech Podcasts" href="/deutsche-tech-podcasts/"> Deutschsprachige Tech Podcasts</a>
+						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Deutschsprachige Tech Podcasts" href="/deutsche-tech-podcasts/"> <span class="w-6 mr-2">🎧</span> Deutschsprachige Tech Podcasts</a>
 					</li>
 					<li class="mb-4">
-						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Supporte den Engineering Kiosk über Buy me a Coffee" href="https://buymeacoffee.com/engineeringkiosk"> Supporte uns mit Kaffee ☕</a>
+						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Spiele für Softwareentwickler:innen" href="/spiele-fuer-softwareentwickler/"> <span class="w-6 mr-2">👾</span> Spiele für Softwareentwickler:innen</a>
 					</li>
 					<li class="mb-4">
-						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Engineering Kiosk Kontakt-Seite" href="/kontakt/"> Kontakt</a>
+						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Supporte den Engineering Kiosk über Buy me a Coffee" href="https://buymeacoffee.com/engineeringkiosk"> <span class="w-6 mr-2">☕</span> Supporte uns mit Kaffee</a>
 					</li>
 					<li class="mb-4">
-						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Engineering Kiosk - die Betreiber" href="/kiosk-betreiber/"> Arbeite mit uns</a>
+						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Engineering Kiosk Kontakt-Seite" href="/kontakt/"> <span class="w-6 mr-2">📮</span> Kontakt</a>
 					</li>
 					<li class="mb-4">
-						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Werbung im Engineering Kiosk Podcast" href="/podcast-werbung/"> Werbung im Engineering Kiosk Podcast</a>
+						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Engineering Kiosk - die Betreiber" href="/kiosk-betreiber/"> <span class="w-6 mr-2">👩‍💻</span> Arbeite mit uns</a>
+					</li>
+					<li class="mb-4">
+						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Werbung im Engineering Kiosk Podcast" href="/podcast-werbung/"> <span class="w-6 mr-2">📢</span> Werbung im Engineering Kiosk Podcast</a>
 					</li>	
 					<li class="mb-4">
 						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Aktuelle Werbepartner" href="/partner/"> Aktuelle Werbepartner</a>
