Show Best-Of Episodes on linktree

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -280,7 +280,7 @@ if (nextMeetup && nextMeetup.date) {
 				</div>
 			</section>
 
-			<PodcastEpisodeListing numberOfItems={6} />
+			<PodcastEpisodeListing numberOfItems={6}  showAllButton={true} headline="Die aktuellsten Podcast Episoden" />
 
 			<!--
 			<BlogPostListing numberOfItems="6" />
