--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -287,9 +287,9 @@ bestPerformingEpisodes = bestPerformingEpisodes.slice(0, 6);
 				</div>
 			</section>
 
-			<PodcastEpisodeListing numberOfItems={3}  showAllButton={true} headline="Die aktuellsten Podcast Episoden" />
+			<PodcastEpisodeListing numberOfItems={3} showAllButton={true} descriptionChars={300} headline="Die aktuellsten Podcast Episoden" />
 
-			<PodcastEpisodeListing episodes={bestPerformingEpisodes} showAllButton={true} headline="Unsere Best-Of Episoden" description="Neu hier? Unsere Best-Of-Episoden sind der perfekte Einstieg in den Engineering Kiosk – spannende Gespräche über Menschen, Technologie und Engineering-Kultur." />
+			<PodcastEpisodeListing episodes={bestPerformingEpisodes} showAllButton={true} descriptionChars={300} headline="Unsere Best-Of Episoden" description="Neu hier? Unsere Best-Of-Episoden sind der perfekte Einstieg in den Engineering Kiosk – spannende Gespräche über Menschen, Technologie und Engineering-Kultur." />
 
 			<!--
 			<BlogPostListing numberOfItems="6" />
