--- a/src/pages/linktree.astro
+++ b/src/pages/linktree.astro
@@ -66,7 +66,7 @@ const latestEpisodes = [
 				
 			</section>	
 
-			<PodcastEpisodeListing episodes={bestPerformingEpisodes} showAllButton={true} headline="Unsere Best-Of Episoden" description="Neu hier? Unsere Best-Of-Episoden sind der perfekte Einstieg in den Engineering Kiosk – spannende Gespräche über Menschen, Technologie und Engineering-Kultur." />
+			<PodcastEpisodeListing episodes={bestPerformingEpisodes} showAllButton={true} descriptionChars={-1} headline="Unsere Best-Of Episoden" description="Neu hier? Unsere Best-Of-Episoden sind der perfekte Einstieg in den Engineering Kiosk – spannende Gespräche über Menschen, Technologie und Engineering-Kultur." />
 
 			<section id="jetzt-folgen" class="py-20 md:py-28 bg-coolGray-900 overflow-hidden" style="background-image: url('/images/elements/pattern-dark2.svg'); background-position: center;">
 				<div class="container px-4 mx-auto flex flex-col items-center">
@@ -77,7 +77,7 @@ const latestEpisodes = [
 				</div>
 			</section>
 
-			<PodcastEpisodeListing episodes={latestEpisodes} showAllButton={true} headline="Unsere drei aktuellsten Episoden" description="Direkt aus dem Studio – die drei aktuellsten Folgen über Software, Teams & Technik, die du nicht verpassen solltest! Jeden Dienstag neu. Überall da wo es Podcasts gibt." />
+			<PodcastEpisodeListing episodes={latestEpisodes} showAllButton={true} descriptionChars={-1} headline="Unsere drei aktuellsten Episoden" description="Direkt aus dem Studio – die drei aktuellsten Folgen über Software, Teams & Technik, die du nicht verpassen solltest! Jeden Dienstag neu. Überall da wo es Podcasts gibt." />
 
 			<section id="jetzt-folgen" class="py-20 md:py-28 bg-coolGray-900 overflow-hidden" style="background-image: url('/images/elements/pattern-dark2.svg'); background-position: center;">
 				<div class="container px-4 mx-auto flex flex-col items-center">
