--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -249,6 +249,8 @@ bestPerformingEpisodes = bestPerformingEpisodes.slice(0, 6);
 							twitter="andygrunwald"
 							linkedin="andy-grunwald-09aa265a"
 							website="https://andygrunwald.com/"
+							podcastHost={true}
+							meetupHost={false}
 							profileLink="/kiosk-betreiber/andy-grunwald/"
 						/>
 
@@ -261,7 +263,65 @@ bestPerformingEpisodes = bestPerformingEpisodes.slice(0, 6);
 							twitter="schafele"
 							linkedin="wolfganggassler"
 							website="https://wolfgang.gassler.org/"
+							podcastHost={true}
+							meetupHost={true}
 							profileLink="/kiosk-betreiber/wolfgang-gassler/"
+						/>
+
+						<HostPreview
+							avatar="tim-hannemann-headshot"
+							name="Tim Hannemann"
+							subtitle="Subtitle TODO"
+							description='Description TODO'
+							github="timhannemann"
+							twitter="timquitesocial"
+							linkedin="timhannemann"
+							website=""
+							podcastHost={false}
+							meetupHost={true}
+							profileLink="/kiosk-betreiber/tim-hannemann/"
+						/>
+
+						<HostPreview
+							avatar="romedius-weiss-headshot"
+							name="Romedius Weiss"
+							subtitle="Subtitle TODO"
+							description='Description TODO'
+							github=""
+							twitter=""
+							linkedin="romedius-weiss-20a147258"
+							website=""
+							podcastHost={false}
+							meetupHost={true}
+							profileLink="/kiosk-betreiber/romedius-weiss/"
+						/>
+
+						<HostPreview
+							avatar="christoph-stanger-headshot"
+							name="Christoph Stanger"
+							subtitle="Subtitle TODO"
+							description='Description TODO'
+							github="cstanger"
+							twitter=""
+							linkedin="cstanger"
+							website=""
+							podcastHost={false}
+							meetupHost={true}
+							profileLink="/kiosk-betreiber/christoph-stanger/"
+						/>
+
+						<HostPreview
+							avatar="mirjam-ziselsberger-headshot"
+							name="Mirjam Ziselsberger"
+							subtitle="Subtitle TODO"
+							description='Description TODO'
+							github="ziselsberger"
+							twitter=""
+							linkedin="mirjam-ziselsberger-482196117"
+							website=""
+							podcastHost={false}
+							meetupHost={true}
+							profileLink="/kiosk-betreiber/mirjam-ziselsberger/"
 						/>
 					</div>
 				</div>
