--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -252,6 +252,7 @@ bestPerformingEpisodes = bestPerformingEpisodes.slice(0, 6);
 							podcastHost={true}
 							meetupHost={false}
 							profileLink="/kiosk-betreiber/andy-grunwald/"
+							slimVersion={true}
 						/>
 
 						<HostPreview
@@ -266,6 +267,7 @@ bestPerformingEpisodes = bestPerformingEpisodes.slice(0, 6);
 							podcastHost={true}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/wolfgang-gassler/"
+							slimVersion={true}
 						/>
 
 						<HostPreview
@@ -280,6 +282,7 @@ bestPerformingEpisodes = bestPerformingEpisodes.slice(0, 6);
 							podcastHost={false}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/tim-hannemann/"
+							slimVersion={true}
 						/>
 
 						<HostPreview
@@ -294,6 +297,7 @@ bestPerformingEpisodes = bestPerformingEpisodes.slice(0, 6);
 							podcastHost={false}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/romedius-weiss/"
+							slimVersion={true}
 						/>
 
 						<HostPreview
@@ -308,6 +312,7 @@ bestPerformingEpisodes = bestPerformingEpisodes.slice(0, 6);
 							podcastHost={false}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/christoph-stanger/"
+							slimVersion={true}
 						/>
 
 						<HostPreview
@@ -322,6 +327,7 @@ bestPerformingEpisodes = bestPerformingEpisodes.slice(0, 6);
 							podcastHost={false}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/mirjam-ziselsberger/"
+							slimVersion={true}
 						/>
 					</div>
 				</div>
