--- a/src/pages/kiosk-betreiber/index.astro
+++ b/src/pages/kiosk-betreiber/index.astro
@@ -40,6 +40,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 							podcastHost={true}
 							meetupHost={false}
 							profileLink="/kiosk-betreiber/andy-grunwald/"
+							slimVersion={false}
 						/>
 
 						<HostPreview
@@ -54,6 +55,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 							podcastHost={true}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/wolfgang-gassler/"
+							slimVersion={false}
 						/>
 
 						<HostPreview
@@ -68,6 +70,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 							podcastHost={false}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/tim-hannemann/"
+							slimVersion={false}
 						/>
 
 						<HostPreview
@@ -82,6 +85,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 							podcastHost={false}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/romedius-weiss/"
+							slimVersion={false}
 						/>
 
 						<HostPreview
@@ -96,6 +100,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 							podcastHost={false}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/christoph-stanger/"
+							slimVersion={false}
 						/>
 
 						<HostPreview
@@ -110,6 +115,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 							podcastHost={false}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/mirjam-ziselsberger/"
+							slimVersion={false}
 						/>
 					</div>
 				</div>
