alps registeration disablement typos

--- a/src/pages/meetup/alps/index.astro
+++ b/src/pages/meetup/alps/index.astro
@@ -102,7 +102,7 @@ const alpsImage = (await import('../../../images/meetup-alps/ibk.jpg')).default;
 												</a>
 												<p class="mt-12 mb-2 md:mb-8 text-lg md:text-m text-coolGray-500 font-medium">  
 													<a class="text-yellow-500" onclick="scrollToElement('a[name=newsletter]'); return false;" href="#newsletter">
-														We have reached the maximum number or registaions for this event. <span class="underline">Please do not show up if you have not registered beforhand.</span> You can subscribe to our newsletter to get an email when the next meetup is announced. See you there. 
+														We have reached the maximum number of registrations for this event. <span class="underline">Please do not show up if you have not registered beforehand.</span> You can subscribe to our newsletter to get an email when the next meetup is announced. See you there. 
 													</a>
 												</p>)
 											}
