adding christoph stanger info

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -303,8 +303,8 @@ bestPerformingEpisodes = bestPerformingEpisodes.slice(0, 6);
 						<HostPreview
 							avatar="christoph-stanger-headshot"
 							name="Christoph Stanger"
-							subtitle="Subtitle TODO"
-							description='Description TODO'
+							subtitle="Mr. Serverless"
+							description='Cloud Softwareentwickler, Schneeliebhaber, Konferenz Junky, Alpenvereins Jugendleiter, Hauptspeise statt Kaiserschmarrn'
 							github="cstanger"
 							twitter=""
 							linkedin="cstanger"
