--- a/src/pages/kiosk-betreiber/index.astro
+++ b/src/pages/kiosk-betreiber/index.astro
@@ -91,8 +91,8 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 						<HostPreview
 							avatar="christoph-stanger-headshot"
 							name="Christoph Stanger"
-							subtitle="Subtitle TODO"
-							description='Description TODO'
+							subtitle="Mr. Serverless"
+							description='Cloud Softwareentwickler, Schneeliebhaber, Konferenz Junky, Alpenvereins Jugendleiter, Hauptspeise statt Kaiserschmarrn'
 							github="cstanger"
 							twitter=""
 							linkedin="cstanger"
@@ -100,7 +100,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 							podcastHost={false}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/christoph-stanger/"
-							slimVersion={false}
+							slimVersion={true}
 						/>
 
 						<HostPreview
