Fixed slimVersion for Christoph

--- a/src/pages/kiosk-betreiber/index.astro
+++ b/src/pages/kiosk-betreiber/index.astro
@@ -100,7 +100,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 							podcastHost={false}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/christoph-stanger/"
-							slimVersion={true}
+							slimVersion={false}
 						/>
 
 						<HostPreview
